--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
-</html>
+<!-- Image with just a source -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+
+<!-- Image with source and alt -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion in the wild" />
+
+<!-- Image with source, alt, and title -->
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="A powerful lion standing in the savannah"
+  title="King of the Jungle"
+/>
